Fix month names are not fully visible - they were covered by end of month filler

--- a/calendar/templates/pixelegg/app.css
+++ b/calendar/templates/pixelegg/app.css
@@ -1136,6 +1136,7 @@ Hide subsequent headers in week view with non-consolidated owners
 .calendar_eventRowsFiller {
   position: absolute;
   top: 0px;
+  right: 0px;
   height: 93%;
   background-color: white;
   border: 1px dashed gray;
